# FA26ExplicitSelfOscillations

./: .gitignore  CMakeLists.txt  LICENSE  README.md
python/: helper_plots.py  runBowedString.py  runClarinet.py  runVoice.py  voice.py  voice_convergence.py
src/engine/: Articulation.h  Biquad.h  Bow.h  BowedStringModal.cpp  BowedStringModal.h  EigenUtility.h  Larynx.cpp  Larynx.h  ResultsStorage.cpp  ResultsStorage.h  SingleReed.cpp  SingleReed.h  Vowels.h  WebsterFDTD.cpp  WebsterFDTD.h
src/mains/: RunBowedStringModal.cpp  RunLarynx.cpp  RunSingleReed.cpp
